<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThemeSettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/theme_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/theme_title" />

    <RadioGroup
        android:id="@+id/rg_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_theme_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            android:padding="12dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_theme_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:padding="12dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_theme_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_system"
            android:padding="12dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    </RadioGroup>

</LinearLayout>